--- a/1-app/package.json
+++ b/1-app/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
@@ -25,6 +26,7 @@
     "element-ui": "^2.7.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "mockjs": "^1.0.1-beta3",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
